--- a/style.css
+++ b/style.css
@@ -38,11 +38,17 @@ nav .tabs {
     justify-content: flex-end;
 }
 
-nav .tabs .tab {
+.exercises {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.tabs .tab {
     display: block;
 }
 
-nav .tabs .tab a[data-switcher] {
+.tabs .tab a[data-switcher] {
     display: block;
     padding: 15px 30px;
     text-decoration: none;
@@ -53,12 +59,12 @@ nav .tabs .tab a[data-switcher] {
     font-size: smaller;
 }
 
-nav .tabs .tab:hover a[data-switcher] {
+.tabs .tab:hover a[data-switcher] {
 
     background-image: linear-gradient(#DD0000, #FF2222);
 }
 
-nav .tabs .tab.is-active a[data-switcher] {
+.tabs .tab.is-active a[data-switcher] {
     background-image: linear-gradient(#DD0000, #FF2222);
 }
 
@@ -82,7 +88,7 @@ nav h1 {
     text-align: center;
 }
 
-#workouts {
+#statisticsContainer {
     display: flex;
     justify-content: space-evenly;
     margin-top: 50px;
@@ -102,12 +108,19 @@ button {
 }
 
 
-.upperWorkouts .workout {
+.workout {
     display: none;
 }
 
-.upperWorkouts .workout.is-active {
+.workout.is-active {
     display: block;
+}
+
+.statsTab {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-flow: wrap;
 }
 
 .container {
@@ -120,7 +133,7 @@ button {
 }
 
 .sets {
-    flex: 2; /* Take up 1/4 of the available space */
+    flex: 2;
     padding: 10px;
 }
 
@@ -135,17 +148,17 @@ button {
 }
 
 .reps-weights {
-    flex: 2; /* Take up remaining space */
+    flex: 2;
 }
 
 .reps-weights button {
     width: 50%;
     height: auto;
-    padding: 10px; /* Add padding for spacing */
-    background-color: red; /* Set the background color to red */
-    color: white; /* Set the text color to white */
-    border: none; /* Remove the border */
-    border-radius: 5px; /* Add rounded corners */
+    padding: 10px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px; 
     font-size: 16px;
     margin: 10px;
 }
@@ -164,3 +177,27 @@ input::placeholder {
     padding: 0;
 }
 
+.collapsible {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    width: 51%;
+    border: 1px solid;
+    text-align: left;
+    font-size: 15px;
+    text-align: center;
+    font-size: larger;
+    font-weight: bolder;
+    margin-bottom: 20px;
+    border-radius: 12px;
+  }
+
+  .active, .collapsible:hover {
+    background-color: #ccc;
+  }
+
+  div #InclineDumbbellBenchPress, div #BarbellRow, div #OverheadPress, div #LatPulldown, div #LateralDumbbellRaise, div #CableFly, div #SeatedInclineBicepCurl, div #CableOverheadTricepExtension, div #BarbellSquat, div #RomanianDeadlift, div #BulgarianSplit-Squat, div #LyingLeg-Curl, div #StandingCalf-Raise, div #SeatedCalf-Raise {
+    padding: 0 150px 50px 150px;
+    display: none;
+    overflow: hidden;
+}
