--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', Arial, sans-serif;
     color: #FFFFFF;
     padding-left: 20px;
     padding-right: 20px;
@@ -9,7 +9,9 @@ body {
     background-color: #222222;
 }
 
-nav ul{
+/* Nav and Tabs */
+
+ul{
 
     list-style-type: none;
     display: flex;
@@ -19,61 +21,23 @@ nav ul{
 }
 
 
-nav ul li{
+ul li{
     list-style: none;
     display: inline-block;
     padding: 1px 7px;
     position: relative;
 }
 
-nav ul li a{
+ul li a{
     text-decoration: none;
     text-transform: uppercase;
     
 }
 
-nav .tabs {
+.tabs {
     list-style-type: none;
     display: flex;
     justify-content: flex-end;
-}
-
-.exercises {
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-}
-
-.tabs .tab {
-    display: block;
-}
-
-.tabs .tab a[data-switcher] {
-    display: block;
-    padding: 15px 30px;
-    text-decoration: none;
-    color: #FFFFFF;
-    background-image: linear-gradient(#FF8C00, #FF6600);
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: smaller;
-}
-
-.tabs .tab:hover a[data-switcher] {
-
-    background-image: linear-gradient(#DD0000, #FF2222);
-}
-
-.tabs .tab.is-active a[data-switcher] {
-    background-image: linear-gradient(#DD0000, #FF2222);
-}
-
-h1, h2 {
-    text-align: center;
-}
-
-h2 {
-    padding: 50px 0 20px 0;
 }
 
 nav h1 {
@@ -82,46 +46,70 @@ nav h1 {
     align-content: center;
 }
 
-.choice {
-    margin: auto;
+.tab {
     display: block;
+}
+
+.tab a[data-switcher] {
+    display: block;
+    padding: 15px 30px;
+    text-decoration: none;
+    color: #222222;
+    background-color: #FFFFFF;
+    border-radius: 9px;
+    cursor: pointer;
+    font-size: smaller;
+    font-weight: 550;
+}
+
+.tab:hover a[data-switcher], .tab.is-active a[data-switcher] {
+    color: #ffffff;
+    background-image: linear-gradient(#008800, #00CC00);
+}
+
+/* General Style */
+
+h1, h2, h3 {
     text-align: center;
+    margin: 50px 0 50px 0;
 }
 
-#statisticsContainer {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 50px;
-}
 
-.box {
-    width: 50px;
-    height: 25px;
+p {
+    text-align: center;
 }
 
 button {
     height: 100px;
     width: 200px;
     font-size: large;
+    font-weight: 600;
     cursor: pointer;
-    color:#000000
+    color:#000000;
+    border-radius: 10px;
+    border: none;
 }
 
-
-.workout {
-    display: none;
+button:hover {
+    background-color: #cccccc;
+    transition: 300ms;
 }
 
-.workout.is-active {
+iframe {
+    border: none;
+    height: 200px;
+    width: 350px;
+}
+
+/* Home Classes and IDs */
+
+.choice {
+    margin: auto;
     display: block;
+    text-align: center;
 }
 
-.statsTab {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    flex-flow: wrap;
-}
+/* Upper and Lower Classes and Ids */
 
 .container {
     display: flex;
@@ -135,16 +123,24 @@ button {
 .sets {
     flex: 2;
     padding: 10px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-flow: wrap;
 }
 
 .set-reps {
-    display: flex; 
-    margin-bottom: 10px; 
-    padding: 20px;
+    text-align: center;
 }
 
 .set-number {
-    padding-right: 10px;
+    display: flex; 
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+.set-number h3 {
+    margin: 20px 0;
 }
 
 .reps-weights {
@@ -165,6 +161,11 @@ button {
 
 input {
     color: #000000;
+    border-radius: 15px;
+    text-align: center;
+    width: 200px;
+    height: 40px;
+    font-size: 15px;
 }
 
 input::placeholder {
@@ -177,11 +178,32 @@ input::placeholder {
     padding: 0;
 }
 
+.statsDiv div {
+    padding: 10px;
+}
+
+/* Statistics Classes and IDs */
+
+#statisticsContainer {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+.statsTab {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-flow: wrap;
+    padding: 0;
+}
+
 .collapsible {
     background-color: #eee;
     color: #444;
     cursor: pointer;
     width: 51%;
+    height: 50px;
     border: 1px solid;
     text-align: left;
     font-size: 15px;
@@ -190,14 +212,398 @@ input::placeholder {
     font-weight: bolder;
     margin-bottom: 20px;
     border-radius: 12px;
-  }
+}
 
-  .active, .collapsible:hover {
+.collapsible:hover {
     background-color: #ccc;
-  }
+}
 
-  div #InclineDumbbellBenchPress, div #BarbellRow, div #OverheadPress, div #LatPulldown, div #LateralDumbbellRaise, div #CableFly, div #SeatedInclineBicepCurl, div #CableOverheadTricepExtension, div #BarbellSquat, div #RomanianDeadlift, div #BulgarianSplit-Squat, div #LyingLeg-Curl, div #StandingCalf-Raise, div #SeatedCalf-Raise {
+div #InclineDumbbellBenchPress, div #BarbellRow, div #OverheadPress, div #LatPulldown, div #LateralDumbbellRaise, div #CableFly, div #SeatedInclineBicepCurl, div #CableOverheadTricepExtension, div #BarbellSquat, div #RomanianDeadlift, div #BulgarianSplit-Squat, div #LyingLeg-Curl, div #StandingCalf-Raise, div #SeatedCalf-Raise {
     padding: 0 150px 50px 150px;
     display: none;
     overflow: hidden;
+}
+
+/* All pages Classes and IDs */
+
+.exercises {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.workout, .set-reps:not(is-active) {
+    display: none;
+}
+
+.workout.is-active, .set-reps.is-active {
+    display: block;
+}
+
+.videos {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 50px 0;
+}
+
+.images {
+    display: flex;
+    justify-content: center;
+}
+
+iframe {
+    border: none;
+}
+
+nav .openMenu {
+    display: none;
+}
+
+.openMenu i, .closeMenu i {
+    color: #222222;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+    * {
+        padding: 0;
+    }
+    
+    .wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto auto 1fr;
+        grid-template-areas: 
+        'h h h' 
+        'a a a'
+        'm m m'; 
+        margin: 0;
+    }
+
+    header {
+        grid-area: h;
+    }
+
+    aside {
+        grid-area: a;
+        padding: 0;
+    }
+
+    main {
+        grid-area: m;
+        padding: 20px 50px;
+    }
+
+    footer {
+        grid-area: f;
+    }
+
+    
+    /* Nav and Tabs */
+
+
+    .tab a[data-switcher] {
+        padding: 30px 20px;
+        text-align: center;
+        margin-top: 5px;
+    }
+
+    .upperLowerTabs a[data-switcher] {
+        padding: 50px 70px;
+        text-align: center;
+        margin: 50px 10px;
+        font-size: larger;
+    }
+
+    /* General Style */
+
+    h1, h2, h3 {
+        text-align: center;
+        margin: 30px 0 30px 0;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    h2 {
+        font-size: 40px;
+    }
+
+    h3 {
+        font-size: 30px;
+    }
+
+    header h1 {
+        text-align: start;
+    }
+
+    p {
+        font-size: 25px;
+    }
+
+    li {
+        font-size: 20px;
+    }
+    
+    .container {
+        display: flex;
+        justify-content: flex-start;
+        flex-flow: wrap;
+    }
+
+    input {
+        width: 250px;
+        height: 50px;
+        font-size: 20px;
+    }
+    .reps-weights{
+        display: flex;
+        justify-content: center;
+    }
+
+    .reps-weights button {
+        width: 250px;
+        height: 50px;
+        border-radius: 15px; 
+        font-size: 20px;
+        margin: 15px
+    }
+
+    .set-reps {
+        display: flex; 
+        justify-content: flex-start;
+        margin-bottom: 10px; 
+        padding: 20px;
+        align-items: center;
+    }
+
+    .scroll {
+        background-color: #333;
+        overflow: auto;
+        white-space: nowrap;
+    }
+
+    nav.exercises {
+        justify-content: flex-start;
+    }
+      
+}
+
+@media screen and (max-width: 767px) {
+
+    * {
+        padding: 0;
+    }
+    
+    .wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto auto 1fr;
+        grid-template-areas: 
+        'h h h' 
+        'a a a'
+        'm m m'; 
+        margin: 0;
+    }
+
+    header {
+        grid-area: h;
+    }
+
+    aside {
+        grid-area: a;
+        padding: 0;
+        position: relative;
+    }
+
+    main {
+        grid-area: m;
+        padding: 0 50px;
+    }
+
+    footer {
+        grid-area: f;
+    }
+
+    
+    /* Nav and Tabs */
+
+
+    .tab a[data-switcher] {
+        padding: 25px 5px;
+        text-align: center;
+        margin-top: 5px;
+    }
+
+    .upperLowerTabs a[data-switcher] {
+        padding: 30px 40px;
+        text-align: center;
+        margin: 50px 0;
+        font-size: 20px;
+    }
+
+    /* General Style */
+
+    h1, h2, h3 {
+        text-align: center;
+        margin: 30px 0 30px 0;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+    header h1 {
+        text-align: start;
+    }
+
+    p {
+        font-size: 20px;
+    }
+
+    li {
+        font-size: 20px;
+    }
+    
+    .container {
+        display: flex;
+        justify-content: flex-start;
+        flex-flow: wrap;
+    }
+
+    input {
+        width: 250px;
+        height: 50px;
+        font-size: 20px;
+    }
+
+    .reps-weights button {
+        width: 250px;
+        height: 50px;
+        border-radius: 15px; 
+        font-size: 20px;
+        margin: 15px
+    }
+
+    .sets {
+        padding: 0;
+    }
+
+    .set-reps {
+        display: flex; 
+        justify-content: flex-start;
+        margin-bottom: 10px; 
+        align-items: center;
+    }
+
+    .scroll {
+        background-color: #333;
+        overflow: auto;
+        white-space: nowrap;
+    }
+
+    
+    div #InclineDumbbellBenchPress, div #BarbellRow, div #OverheadPress, div #LatPulldown, div #LateralDumbbellRaise, div #CableFly, div #SeatedInclineBicepCurl, div #CableOverheadTricepExtension, div #BarbellSquat, div #RomanianDeadlift, div #BulgarianSplit-Squat, div #LyingLeg-Curl, div #StandingCalf-Raise, div #SeatedCalf-Raise {
+        padding: 0 10px 50px 10px;
+    }
+      
+    .collapsible {
+        width: 300px;
+        height: 80px;
+        padding: 15px;
+    }
+
+    .choice {
+        display: flex;
+        justify-content: center;
+    }
+
+    .choice button {
+        padding: 0 30px;
+        width: auto;
+        margin: 10px;
+        font-size: 20px;
+    }
+
+    .videos {
+        display: flex;
+        flex-wrap: wrap;
+        align-content: space-between;
+    }
+
+    iframe {
+        margin: 20px;
+    }
+
+    /* nav menu */
+
+    nav {
+        background: #CCCCCC;
+        color: #000000;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    nav .links {
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 10;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #CCCCCC;
+        transition: top 1000ms ease;
+        display: none;
+    }
+
+    .links li a {
+        display: inline-block;
+        padding: 15px;
+        color: #000000;
+        font-size: 15px;
+    }
+
+    ul{
+
+        display: inline-block;
+        
+    }
+    
+    
+    ul li{
+        display: flex;
+        justify-content: flex-start;
+    }    
+
+    nav .openMenu {
+        display: block;
+        color: #000000;
+        margin: 20px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    
+    nav .closeMenu {
+        display: block;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+    
+
+    nav.exercises {
+        justify-content: flex-start;
+    }
 }
