--- a/style.css
+++ b/style.css
@@ -599,7 +599,7 @@ nav .openMenu {
         display: block;
         position: absolute;
         top: 20px;
-        left: 20px;
+        right: 20px;
     }
     
 
